app/static/css/dark-theme.css
html {
    background: var(--whoogle-dark-page-bg) !important;
}

body {
    background: var(--whoogle-dark-page-bg) !important;
}

div {
    color: var(--whoogle-dark-text) !important;
}

label {
    color: var(--whoogle-dark-contrast-text) !important;
}

li a {
    color: #4b8eaa !important;
}

li {
    color: var(--whoogle-dark-text) !important;
}

textarea {
    background: var(--whoogle-dark-page-bg) !important;
    color: var(--whoogle-dark-text) !important;
}

a:visited h3 div {
    color: var(--whoogle-dark-result-visited) !important;
}

a:link h3 div {
    color: var(--whoogle-dark-result-title) !important;
}

a:link div {
    color: var(--whoogle-dark-result-url) !important;
}

div span {
    color: var(--whoogle-dark-secondary-text) !important;
}

input {
    background-color: var(--whoogle-dark-page-bg) !important;
    color: var(--whoogle-dark-text) !important;
}

select {
    background: var(--whoogle-dark-page-bg) !important;
    color: var(--whoogle-dark-text) !important;
}

.search-container {
    background-color: var(--whoogle-dark-page-bg) !important;
}

.ZINbbc {
    background-color: var(--whoogle-dark-result-bg) !important;   
}

.bRsWnc {
    background-color: var(--whoogle-dark-result-bg) !important;   
}

#search-bar {
    border: 2px solid var(--whoogle-dark-element-bg) !important;
    color: var(--whoogle-dark-text) !important;
}

#search-bar:focus {
    color: var(--whoogle-dark-text) !important;
}

#search-submit {
    border: 1px solid var(--whoogle-dark-element-bg) !important;
    background: var(--whoogle-dark-element-bg) !important;
    color: var(--whoogle-contrast-text) !important;
}

.info-text {
    color: var(--whoogle-dark-contrast-text) !important;
    opacity: 75%;
}

.collapsible {
    color: var(--whoogle-dark-element-bg) !important;
}

.collapsible:after {
    color: var(--whoogle-dark-element-bg) !important;
}

.active {
    background-color: var(--whoogle-dark-element-bg) !important;
    color: var(--whoogle-dark-contrast-text) !important;
}

.content {
    background-color: var(--whoogle-dark-element-bg) !important;
    color: var(--whoogle-contrast-text) !important;
}

.active:after {
    color: var(--whoogle-dark-contrast-text);
}

#gh-link {
    color: var(--whoogle-dark-element-bg);
}

.autocomplete-items {
    border: 1px solid #685e79;
}

.autocomplete-items div {
    color: #fff;
    background-color: #222;
    border-bottom: 1px solid #242424;
}

.autocomplete-items div:hover {
    background-color: #404040;
}

.autocomplete-active {
    background-color: var(--whoogle-dark-element-bg) !important;
    color: var(--whoogle-dark-contrast-text) !important;
}

